<resources>
    <string name="app_name">GroupFinder</string>
    <string name="action_settings">Settings</string>

    <string name="find_restaurant">Search Businesses</string>
    <string name="view_events">View Events</string>
    <string name="zip_code">Enter Zip Code</string>
    <string name="search_term">Enter Search Term</string>
    <string name="nearby">Here are all the businesses near:\u0020</string>
    <string name="total">Total Results:\u0020</string>
    <string name="find">Find businesses in your area</string>

    <string name="name">Business Name</string>
    <string name="address">Business Address</string>
    <string name="number">Business Phone Number</string>
    <string name="title_activity_business_view">BusinessViewActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
</resources>
